src/test/deca/syntax/invalid/resultats/test45_decl_method-synt.res
./src/test/deca/syntax/invalid/test45_decl_method.deca:16:15: mismatched input ')' expecting IDENT
